--- a/CS2-Website-Laravel/docker/Dockerfile
+++ b/CS2-Website-Laravel/docker/Dockerfile
@@ -52,6 +52,7 @@ COPY start-container /usr/local/bin/start-container
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY php.ini /etc/php/8.2/cli/conf.d/99-sail.ini
 RUN chmod +x /usr/local/bin/start-container
+RUN chown sail /var/www/html
 
 EXPOSE 8000
 
